prevent common data files from accidental upload

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,14 @@
 /pkg/
 /spec/reports/
 /tmp/
+
+# Make sure no sensitive data is accidentally committed
+# add w/ git add --force if actually docs
+*.csv
+*.txt
+*.xml
+*.xls
+*.xlst
+*.xlsx
+*.doc
+*.docx
